# rag-industrial-eval-guardrails

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  model_card.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  guardrails.py  main.py  pii.py  rag_pipeline.py  reranker.py  retriever.py  schemas.py  settings.py
db/: init.sql  pgvector.Dockerfile
eval/: questions.jsonl  ragas_config.yaml
infra/diagrams/: arch.mmd
scripts/: bench_latency.py  evaluate_ragas.py  generate_synthetic_corpus.py  ingest.py  prepare_data.py
tests/: test_api.py  test_guardrails.py  test_retrieval.py
